--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,71 @@ body {
 /* GLOBAL */
 .container {
   width: 80%;
+  margin: auto;
+  overflow: hidden;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+.btn {
+  height: 38px;
+  background: #e8491d;
+  border: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.dark {
+  padding: 15px;
+  background: #35424a;
+  color: #fff;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+/* HEADER */
+header {
+  background: #35424a;
+  color: #fff;
+  padding-top: 30px;
+  min-height: 70px;
+  border-bottom: #e8491d 3px solid;
+}
+
+header a {
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+header li {
+  float: left;
+  display: inline;
+  padding: 0 20px 0 20px;
+}
+
+header #branding h1 {
+  margin: 0;
+}
+
+header nav {
+  float: right;
+  margin-top: 10px;
+}
+
+header .highlight,
+header .current a {
+  color: #e8491d;
+  font-weight: 700;
+}
+
+header a:hover {
+  color: #ccc;
+  font-weight: 700;
 }
 
 #showcase {
@@ -15,6 +80,16 @@ body {
   background: url(../img/showcase.jpg) no-repeat 0 -400px;
   text-align: center;
   color: #fff;
+}
+
+#showcase h1 {
+  margin-top: 100px;
+  font-size: 35px;
+  margin-bottom: 10px;
+}
+
+#showcase p {
+  font-size: 20px;
 }
 
 @media (max-width: 768px) {
