--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ ul {
   border: 0;
   padding-left: 20px;
   padding-right: 20px;
+  color: #fff;
 }
 
 .dark {
@@ -53,6 +54,10 @@ header li {
   float: left;
   display: inline;
   padding: 0 20px 0 20px;
+}
+
+header #branding {
+  float: left;
 }
 
 header #branding h1 {
@@ -92,8 +97,91 @@ header a:hover {
   font-size: 20px;
 }
 
+/* NEWSLETTER */
+
+#newsletter {
+  padding: 15px;
+  color: #fff;
+  background: #35424a;
+}
+
+#newsletter h1 {
+  float: left;
+}
+
+#newsletter form {
+  float: right;
+  margin-top: 15px;
+}
+
+#newsletter input[type="email"] {
+  padding: 4px;
+  height: 25px;
+  width: 250px;
+}
+
+/* BOXES */
+#boxes {
+  margin-top: 20px;
+}
+
+#boxes .box {
+  float: left;
+  text-align: center;
+  width: 30%;
+  padding: 10px;
+}
+
+#boxes .box img {
+  width: 90px;
+}
+
+/* ############################### */
+/* ABOUT/SERVICE  PAGES HERE LATER */
+/* ############################### */
+
+footer {
+  padding: 20px;
+  margin-top: 20px;
+  color: #fff;
+  background-color: #e8491d;
+  text-align: center;
+}
+
 @media (max-width: 768px) {
   #showcase {
     background-position: center;
+  }
+
+  header #branding,
+  header nav,
+  header nav li,
+  #newsletter h1,
+  #newsletter form,
+  #boxes .box {
+    float: none;
+    text-align: center;
+    width: 100%;
+  }
+
+  header {
+    padding-bottom: 40px;
+  }
+
+  // #showcase h1 {
+  //   margin-top: 40px;
+  // }
+
+  #newsletter button,
+  .quote button {
+    display: block;
+    width: 100%;
+  }
+
+  #newsletter form input[type="email"],
+  .quote input,
+  .quote textarea {
+    width: 100%;
+    margin-bottom: 5px;
   }
 }
