--- a/css/style.css
+++ b/css/style.css
@@ -136,9 +136,36 @@ header a:hover {
   width: 90px;
 }
 
-/* ############################### */
-/* ABOUT/SERVICE  PAGES HERE LATER */
-/* ############################### */
+/* SIDEBAR */
+
+aside#sidebar .quote input,
+aside#sidebar .quote textarea {
+  width: 90;
+  padding: 5px;
+}
+
+aside#sidebar {
+  float: right;
+  width: 30%;
+  margin-top: 10px;
+}
+
+/* MAIN-COL */
+
+article#main-col {
+  float: left;
+  width: 65%;
+}
+
+/* SERVICES */
+
+ul#services li {
+  list-style: none;
+  padding: 20px;
+  border: #ccc solid 1px;
+  margin-bottom: 5px;
+  background-color: #e6e6e6;
+}
 
 footer {
   padding: 20px;
